--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,12 +16,16 @@ env:
   RUSTFLAGS: ""
 
 jobs:
-  lints:
-    runs-on: ubuntu-latest-8-cores
+  json-lints:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Check for json syntax errors
-        run: "for i in `git ls-tree --full-tree -r --name-only HEAD |grep json`; do json_pp <$i >/dev/null || echo JSON syntax error in $i; done"
+        run: "for i in `git ls-tree --full-tree -r --name-only HEAD |grep json`; do json_pp <$i >/dev/null ; done"
+  rust-lints:
+    runs-on: ubuntu-latest-8-cores
+    steps:
+      - uses: actions/checkout@v4
       - name: Setup sccache
         uses: mozilla-actions/sccache-action@v0.0.3
       - uses: actions-rust-lang/setup-rust-toolchain@v1
