--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Check for json syntax errors
-        run: "for i in `git ls-tree --full-tree -r --name-only HEAD |grep json`; do json_pp <$i >/dev/null ; done"
+        run: "for i in `git ls-tree --full-tree -r --name-only HEAD |grep json`; do echo Checking $i:; json_pp <$i >/dev/null ; done"
   rust-lints:
     runs-on: ubuntu-latest-8-cores
     steps:
