chore: allow us to run some CI jobs manually when we need

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,15 @@ on:
     branches:
       - master
   pull_request:
-
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Tag to run the workflow on'
+        required: true
+      run_specific_job:
+        description: 'Specify a job to run (test-runtime, try-runtime-execute, etc.)'
+        required: true
+  
 env:
   toolchain: stable
   target: wasm32-unknown-unknown
