--- a/pallets/sponsorship/Cargo.toml
+++ b/pallets/sponsorship/Cargo.toml
@@ -26,6 +26,7 @@ log = { workspace = true, default-features = false }
 [dev-dependencies]
 pallet-balances.workspace = true
 pallet-uniques.workspace = true
+pallet-utility.workspace = true
 sp-core.workspace = true
 sp-state-machine = { workspace = true, default-features = false }
 
@@ -48,6 +49,7 @@ runtime-benchmarks = [
 	"frame-support/runtime-benchmarks",
 	"frame-system/runtime-benchmarks",
 	"pallet-uniques/runtime-benchmarks",
+	"pallet-utility/runtime-benchmarks",
 	"pallet-balances/runtime-benchmarks",
 ]
 try-runtime = [
