Build docs from time to time.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,7 +98,7 @@ jobs:
           fail_ci_if_error: false
           files: lcov.info
 
-  try-runtime-prepare:
+  try-runtime:
     runs-on: ubuntu-latest
 
     steps:
@@ -134,9 +134,6 @@ jobs:
           fileName: "eden-snapshot-full"
           out-file-path: "snaps"
           extract: false
-      - name: Check files
-        run: |
-           md5sum snaps/eden-snapshot-full
       - name: Run try-runtime
         uses: NodleCode/action-try-runtime/check@beta
         with:
