--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -8,6 +8,8 @@ env:
 on:
   push:
     branches: master
+  pull_request: 
+    branches: master
 
 jobs:
   autodoc:
@@ -23,6 +25,7 @@ jobs:
       - name: Build the docs
         run: cargo doc --all --no-deps
       - name: Deploy the docs
+        if: github.event_name != 'pull_request'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
