Add wasm for doc build

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           toolchain: stable
           components: rust-src
+          target: wasm32-unknown-unknown
       - name: Install protobuf-compiler
         run: |
           sudo apt-get install protobuf-compiler
