--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,7 +135,7 @@ jobs:
           out-file-path: "snaps"
           extract: false
       - name: Run try-runtime
-        uses: NodleCode/action-try-runtime/check@beta
+        uses: NodleCode/action-try-runtime/check@v0.6.1
         with:
           snap: snaps/eden-snapshot-full
           runtime: target/release/wbuild/runtime-eden/runtime_eden.wasm
